--- a/index.html
+++ b/index.html
@@ -256,11 +256,11 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
         // 1.1 PROFILE & BRANDING VARIABLES (REQUIRED)
         const profileData = {
             studentName: "Oumousajo Sow",
-            tagline: "Future-Focused Problem Solver in Digital Media",
-            currentYear: "Sophomore", // Freshman, Sophomore, Junior, Senior
-            major: "Computer Science & Digital Media",
-            gpa: 3.85,
-            impactScoreMultiplier: 10, // Adjusts how much projects/awards count towards total impact
+            tagline: "Future leader in the making",
+            currentYear: "Freshman", // Freshman, Sophomore, Junior, Senior
+            major: Marketing",
+            gpa: 0,
+            impactScoreMultiplier: 0, // Adjusts how much projects/awards count towards total impact
             
             // --- INTRODUCTION & BRANDING FIELDS ---
             photoUrl: "https://placehold.co/150x150/BA0C2F/FFFFFF/png?text=RILEY+C", // Replace with a URL to a professional headshot
@@ -576,4 +576,5 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
