--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             currentYear: "Freshman", // Freshman, Sophomore, Junior, Senior
             major: Marketing",
             gpa: 3.85,
-            impactScoreMultiplier: 3, // Adjusts how much projects/awards count towards total impact
+            impactScoreMultiplier: 10, // Adjusts how much projects/awards count towards total impact
             
             // --- INTRODUCTION & BRANDING FIELDS ---
             photoUrl: "https://placehold.co/150x150/BA0C2F/FFFFFF/png?text=RILEY+C", // Replace with a URL to a professional headshot
@@ -279,22 +279,23 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.2 ACADEMICS (REQUIRED: Add relevant classes)
         const academicData = [
-            { name: "Intro to Python Programming", grade: "A", semester: "Fall 2024", relevance: "Code" },
-            { name: "Digital Design Principles", grade: "A-", semester: "Fall 2024", relevance: "Design" },
-            { name: "Calculus I", grade: "B+", semester: "Fall 2024", relevance: "Foundational" },
-            { name: "Web Development (Front-End)", grade: "A", semester: "Spring 2025", relevance: "Code" },
-            { name: "Data Structures", grade: "In Progress", semester: "Current", relevance: "Code" },
+            { name: "Intro to Miller College of Business", grade: "A+", semester: "Current", relevance: "Code" },
+            { name: "Business Information & Systems", grade: "A+", semester: "Current", relevance: "Design" },
+            { name: "Writing & Rhetoric", grade: "B+", semester: "Current", relevance: "Foundational" },
+            { name: "Personal Finance", grade: "A", semester: "Current", relevance: "Code" },
+            { name: "Fundamentals of Human Health", grade: "In Progress", semester: "Current", relevance: "Code" },
         ];
 
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
         const projectData = [
             {
-                title: "Local Charity Website Redesign",
-                category: "Design",
-                challenge: "The local Humane Society site was not mobile-friendly, resulting in high bounce rates on the donation page.",
-                solution: "Designed and implemented a responsive, user-centered interface using HTML, Tailwind CSS, and vanilla JS.",
-                result: "Increased mobile conversion rate by **15%** and reduced bounce rate by **22%** in the first month.",
-                link: "https://github.com/riley/charity-site"
+               title: "Cardial Bookstore Project (PBL 1)",
+category: "Code/Academic",
+challenge: "Needed to analyze and document the full system requirements for a fictional bookstore using the C‑S‑R format.",
+solution: "Created a detailed blueprint including user stories, workflow diagrams, and functional requirements.",
+result: "Produced a complete systems analysis package that met project standards and prepared the foundation for later builds.",
+link: ""
+                
             },
             {
                 title: "Twitter Sentiment Analyzer (Academic)",
@@ -576,6 +577,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
