--- a/index.html
+++ b/index.html
@@ -298,27 +298,28 @@ link: ""
                 
             },
             {
-                title: "Twitter Sentiment Analyzer (Academic)",
-                category: "Code",
-                challenge: "Required to analyze public sentiment towards a political topic using programming tools for a final project.",
-                solution: "Used Python (Pandas/Matplotlib) to clean data and built a basic Naive Bayes classification model.",
-                result: "Achieved **82%** accuracy in classifying positive/negative tweets, earning the highest grade in the class (A).",
-                link: ""
+               title: "ISOM 210: Personal Portfolio Project",
+category: "Web/Design",
+challenge: "Required to build a clean, professional personal portfolio site to showcase skills and course projects.",
+solution: "Designed and built a responsive Web 1.0-style site using HTML and CSS, including site map, wireframes, and structured content.",
+result: "Completed a functional portfolio that organizes all projects clearly and meets course grading guidelines.",
+link: ""
             },
             {
-                title: "3D Planet Rendering",
-                category: "Code/Personal",
-                challenge: "A personal challenge to learn a new visualization library (three.js) over winter break.",
-                solution: "Created a simple animated model of a rotating planet using three.js, demonstrating coordinate system mastery.",
-                result: "Successfully rendered complex geometry and optimized the animation loop to maintain **60 FPS** on desktop browsers.",
-                link: "https://riley.github.io/planet-render"
+                title: "PBL 2 – Web 1.0: The Bound Volume (Digital Shelf)",
+category: "Web/Academic",
+challenge: "Tasked with turning the PBL 1 To‑Be process into a live, static website for the bookstore system.",
+solution: "Started outlining the site structure, wireframes, and content sections based on instructor guidance.",
+result: "Project in progress — successfully added to portfolio as a placeholder for upcoming development.",
+link: ""
             }
         ];
 
         // 1.4 EXPERIENCE & AWARDS (REQUIRED)
         const recognitionData = {
             experience: [
-                { title: "Team Lead, Ball State Hackathon", type: "Extracurricular", duration: "Oct 2025", detail: "Led a four-person team to develop a functional prototype in **24 hours**." },
+             { title: "President, Jobs for America Club", type: "Leadership", duration: "2024 - Present", detail: "Lead campus initiatives and manage team projects while maintaining strong academic performance." },
+{ title: "Shift Lead, Chipotle", type: "Work Experience", duration: "2024 - Present", detail: "Oversee team workflow, train new employees, and support high-volume operations." },
                 { title: "Library Volunteer (IT Support)", type: "Community Service", duration: "Jan - May 2025", detail: "Provided **40+ hours** of technical support for public computers and staff devices." },
             ],
             awards: [
