--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             studentName: "Oumousajo Sow",
             tagline: "Future leader in the making",
             currentYear: "Freshman", // Freshman, Sophomore, Junior, Senior
-            major: Marketing",
+            major: "Marketing",
             gpa: 3.85,
             impactScoreMultiplier: 10, // Adjusts how much projects/awards count towards total impact
             
@@ -578,6 +578,7 @@ link: ""
     </script>
 </body>
 </html>
+
 
 
 
