--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             // --- INTRODUCTION & BRANDING FIELDS ---
             photoUrl: "Jojo PFP.png?text=RILEY+C", // Replace with a URL to a professional headshot
             logoUrl: "https://placehold.co/40x40/BA0C2F/FFFFFF.png?text=BSU", // URL for your school logo or personal brand icon
-            personalBio: "I am a sophomore driven by the intersection of computational thinking and creative design. My academic focus is on building scalable, user-centric web applications and leveraging data analysis to inform design decisions. I believe in continuous learning and applying classroom theory to immediate, impactful real-world challenges.",
-            missionStatement: "To build digital solutions that simplify complex processes and empower small businesses, leveraging Python, front-end frameworks, and a user-first design approach.",
+            personalBio: "I’m a freshman who’s really focused on growth, leadership, and turning my ideas into real results. I like mixing creativity, organization, and problem-solving in everything I do.I stay disciplined, goal-driven, and always look for ways to make an impact.",
+            missionStatement: "To lead, grow, and create real-world solutions that help people. I want to use tech, organization, and problem-solving to make systems easier, support communities, and open doors for others—especially in spaces where access and fairness matter.",
         };
 
         /*
@@ -279,11 +279,11 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.2 ACADEMICS (REQUIRED: Add relevant classes)
         const academicData = [
-            { name: "Intro to Miller College of Business", grade: "A+", semester: "Current", relevance: "Code" },
-            { name: "Business Information & Systems", grade: "A+", semester: "Current", relevance: "Design" },
-            { name: "Writing & Rhetoric", grade: "B+", semester: "Current", relevance: "Foundational" },
-            { name: "Personal Finance", grade: "A", semester: "Current", relevance: "Code" },
-            { name: "Fundamentals of Human Health", grade: "In Progress", semester: "Current", relevance: "Code" },
+            { name: "Intro to Miller College of Business", grade: "A", semester: "Current", relevance: "Business Foundations" },
+            { name: "Business Information & Systems", grade: "A+", semester: "Current", relevance: "Tech"   },
+            { name: "Writing & Rhetoric", grade: "A", semester: "Current", relevance: "Foundational" },
+            { name: "Personal Finance", grade: "B+", semester: "Current", relevance: "Finance" },
+            { name: "Fundamentals of Human Health", grade: "A", semester: "Current", relevance: "Health Basics" },
         ];
 
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
@@ -291,7 +291,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             {
                title: "Cardial Bookstore Project (PBL 1)",
 category: "Code/Academic",
-challenge: "Needed to analyze and document the full system requirements for a fictional bookstore using the C‑S‑R format.",
+challenge: "Needed to analyze and document the full system requirements for a fictional bookstore.",
 solution: "Created a detailed blueprint including user stories, workflow diagrams, and functional requirements.",
 result: "Produced a complete systems analysis package that met project standards and prepared the foundation for later builds.",
 link: ""
@@ -320,11 +320,10 @@ link: ""
             experience: [
              { title: "President, Jobs for America Club", type: "Leadership", duration: "2024 - Present", detail: "Lead campus initiatives and manage team projects while maintaining strong academic performance." },
 { title: "Shift Lead, Chipotle", type: "Work Experience", duration: "2024 - Present", detail: "Oversee team workflow, train new employees, and support high-volume operations." },
-                { title: "Library Volunteer (IT Support)", type: "Community Service", duration: "Jan - May 2025", detail: "Provided **40+ hours** of technical support for public computers and staff devices." },
-            ],
+               
             awards: [
-                { title: "Dean's List", duration: "Fall 2024", detail: "Achieved a **3.8 GPA**." },
-                { title: "Rising Star Freshman Award", duration: "Spring 2025", detail: "Recognized by the CS department for high academic achievement and engagement." },
+                { title: "Coming soon!!" },
+                { title: "Coming Soon!!" },
             ]
         };
 
@@ -578,6 +577,7 @@ link: ""
     </script>
 </body>
 </html>
+
 
 
 
