--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.2 ACADEMICS (REQUIRED: Add relevant classes)
         const academicData = [
-            { name: "Intro to Miller College of Business", grade: "A", semester: "Current", relevance: "Business Foundations" },
-            { name: "Business Information & Systems", grade: "A+", semester: "Current", relevance: "Tech"   },
-            { name: "Writing & Rhetoric", grade: "A", semester: "Current", relevance: "Foundational" },
+            { name: "Intro to Miller College of Business", grade: "A", semester: "Current", relevance: "Academic" },
+            { name: "Business Information & Systems", grade: "A+", semester: "Current", relevance: "Code"},
+            { name: "Writing & Rhetoric", grade: "A", semester: "Current", relevance: "Academic" },
             { name: "Personal Finance", grade: "B+", semester: "Current", relevance: "Finance" },
-            { name: "Fundamentals of Human Health", grade: "A", semester: "Current", relevance: "Health Basics" },
+            { name: "Fundamentals of Human Health", grade: "A", semester: "Current", relevance: "Academic" },
         ];
 
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
@@ -577,6 +577,7 @@ link: ""
     </script>
 </body>
 </html>
+
 
 
 
